--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           name: repo
           path: |
-            repo.tgz
+            repo.tar
 
   test:
     needs: init
